[gd_scene load_steps=8 format=3 uid="uid://dx41odpxhv77s"]

[ext_resource type="PackedScene" uid="uid://c78rxx0uws7v4" path="res://player/player.tscn" id="1_csp1f"]
[ext_resource type="Script" path="res://levels/bug_squasher/bug_squasher.gd" id="1_u2k1x"]
[ext_resource type="PackedScene" uid="uid://dsurco1hgjaay" path="res://bug/bug.tscn" id="2_0fijt"]
[ext_resource type="PackedScene" uid="uid://dhjmemycsexdb" path="res://hud/hud.tscn" id="2_2im1j"]
[ext_resource type="AudioStream" uid="uid://bbwp3jj3yyaul" path="res://assets/audio/shock.wav" id="5_h66oc"]
[ext_resource type="Texture2D" uid="uid://q64g3txdtbs1" path="res://assets/art/background.png" id="6_mlnjk"]

[sub_resource type="Curve2D" id="Curve2D_awtil"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -1, -2, 0, 0, 0, 0, 1153, -1, 0, 0, 0, 0, 1152, 647, 0, 0, 0, 0, -2, 649, 0, 0, 0, 0, -1, -2)
}
point_count = 5

[node name="BugSquasher" type="Node"]
script = ExtResource("1_u2k1x")
mob_scene = ExtResource("2_0fijt")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1156.0
offset_bottom = 1024.0
texture = ExtResource("6_mlnjk")

[node name="Player" parent="." instance=ExtResource("1_csp1f")]

[node name="BugTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_awtil")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2(-1, -2)
rotation = 0.000866551

[node name="EndTimer" type="Timer" parent="."]
wait_time = 12.0
one_shot = true

[node name="HUD" parent="." instance=ExtResource("2_2im1j")]

[node name="shock" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_h66oc")
volume_db = 1.0

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="BugTimer" to="." method="_on_bug_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="EndTimer" to="." method="_on_end_timer_timeout"]
[connection signal="end_game" from="HUD" to="." method="_on_hud_end_game"]
[connection signal="start_game" from="HUD" to="." method="_on_hud_start_game"]
